WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 251838
Values set by mask and background shorthands should not serialize as "initial"
https://bugs.webkit.org/show_bug.cgi?id=251838
Summary
Values set by mask and background shorthands should not serialize as "initial"
Darin Adler
Reported
2023-02-06 22:23:52 PST
The mask and background shorthands set lists of values on their longhands. But the values in those lists should not serialize as "initial".
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-02-06 22:35:49 PST
<
rdar://problem/105114588
>
Darin Adler
Comment 2
2023-02-08 21:50:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9849
EWS
Comment 3
2023-02-11 11:14:14 PST
Committed
260157@main
(5d2cf8738277): <
https://commits.webkit.org/260157@main
> Reviewed commits have been landed. Closing PR #9849 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug