Source/WebCore/css/StyleProperties.cpp
@@ -70,10 +70,25 @@ String serializeLonghandValue(CSSPropertyID property, const CSSValue& value)
         // Opacity percentage values serialize as a fraction in the range 0-1, not "%".
         if (is<CSSPrimitiveValue>(value) && downcast<CSSPrimitiveValue>(value).isPercentage())
             return makeString(downcast<CSSPrimitiveValue>(value).doubleValue() / 100);
-        FALLTHROUGH;
+        break;
     default:
-        return value.isImplicitInitialValue() ? initialValueTextForLonghand(property) : value.cssText();
+        break;
     }
+    if (value.isBaseValueList()) {
+        // Longhands set by mask and background shorthands can have comma-separated lists with implicit initial values in them.
+        // We need to serialize those lists with the actual values, not as "initial".
+        // Doing this for all CSSValueList with comma separators is better than checking the property is one of those longhands.
+        // Serializing this way is harmless for other properties; those won't have any implicit initial values.
+        auto& list = downcast<CSSValueList>(value);
+        if (list.separator() == CSSValueList::CommaSeparator) {
+            StringBuilder result;
+            auto separator = ""_s;
+            for (auto& individualValue : list)
+                result.append(std::exchange(separator, ", "_s), serializeLonghandValue(property, individualValue));
+            return result.toString();
+        }
+    }
+    return value.isImplicitInitialValue() ? initialValueTextForLonghand(property) : value.cssText();
 }
 
 inline String StyleProperties::serializeLonghandValue(CSSPropertyID propertyID) const
